# workzone_metrics

./: .gitignore  README.md  pyproject.toml  workzone_annotations.json  workzone_annotations_full.json
results_new/: report.json  report_full.json  report_full_tolerance15.json  report_full_tolerance30.json  report_full_tolerance5.json  report_tolerance30.json
results_new_strict/: report_tolerance15.json  report_tolerance5.json
scripts/: coco_eval_yolo.py  rerun_failed_snippets.py  run_orin_batch.sh  tolerance_sweep.py
src/workzone_metrics/: __init__.py  cli.py  data_models.py  io.py  report.py  utils.py
src/workzone_metrics/metrics/: detection.py  ocr.py  state.py
tests/: test_state_metrics.py
